k8s/staging/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-staging
  namespace: doe25-group-15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-staging
  template:
    metadata:
      labels:
        app: backend-staging
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: backend
          image: registry.chas-lab.dev/chas-challenge-2026/grupp-15/zero-bug-heroes/zero-bug-heroes/backend:staging
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: backend-staging
  namespace: doe25-group-15
spec:
  selector:
    app: backend-staging
  ports:
    - port: 3001
      targetPort: 3001
