k8s/staging/coturn.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn-staging
  namespace: doe25-group-15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn-staging
  template:
    metadata:
      labels:
        app: coturn-staging
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeName: cc-wp-1
      containers:
        - name: coturn
          image: coturn/coturn:latest
          args: ["-c", "/etc/coturn/turnserver.conf"]
          volumeMounts:
            - name: config
              mountPath: /etc/coturn
      volumes:
        - name: config
          configMap:
            name: coturn-config
---
apiVersion: v1
kind: Service
metadata:
  name: coturn-staging
  namespace: doe25-group-15
spec:
  type: LoadBalancer
  selector:
    app: coturn-staging
  ports:
    - name: turn-udp
      port: 3478
      targetPort: 3478
      protocol: UDP
