k8s/staging/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-staging
  namespace: doe25-group-15
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-staging
  template:
    metadata:
      labels:
        app: postgres-staging
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-staging
  namespace: doe25-group-15
spec:
  selector:
    app: postgres-staging
  ports:
    - port: 5432
      targetPort: 5432
