k8s/staging/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress-backend
  namespace: doe25-group-15
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: doe25-group-15-strip-api@kubernetes-crd
spec:
  ingressClassName: traefik
  rules:
    - host: staging-volly.labb.k3s.chas-lab.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-staging
                port:
                  number: 3001
